methods.picture.PictureMono1.scala.error
Compilation error:
PictureMono1:1: error: Missing closing brace `}' assumed here
def makeV {
^PictureMono1:1: error: expected class or object definition
def makeV {
^